P font colour changes

--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -17,11 +17,10 @@ h1 {
   font-weight: 700;
 }
 p {
- color: #777;
-  font-size: 16px;
-  line-height: 28px;
-  word-spacing: 1px;
-  letter-spacing: 1px;
+ font-family: palatino, georgia, serif;  
+  font-size: 18px;
+  line-height: 1.5em;
+  margin: 2em;
 }
 
 a {
