--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -1,3 +1,7 @@
+
+
+@import url(https://fonts.googleapis.com/css?family=Mystery+Quest);
+
 body {
 		background: #ffffff;
     font-family: 'Source Sans Pro', sans-serif;
