--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Lora|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
 body {
 		background: #ffffff;
@@ -11,38 +11,92 @@ body {
 }
 h1 {
   font-weight: 400;
-  letter-spacing: 0.3rem;
-  text-transform: uppercase;
-  font-family:'Mystery Quest',cursive;
+  margin: 1.5em;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
 }
 
-h1 {
-  color: #000;
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-p {
- font-family: palatino, georgia, serif;  
-  font-size: 18px;
+h2{
+  background: white;
+  color: black;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 13px;
+  font-weight: normal;
   line-height: 1.5em;
   margin: 2em;
+}
+
+h3{
+  background: white;
+  color: #00ccff;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 1.5em;
+  margin: 2em;
+}
+
+p1 {  
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
+p2 {
+  font-family: palatino, georgia, serif;  
+  font-size: 13px;
+  line-height: 1em;
+  margin: 2em;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 a {
   outline: none;
   text-decoration: none;
 }
-a,
-a:hover,
-a:focus {
-  color: inherit;
-  text-decoration: none;
-  outline: 0;
-  -webkit-transition: all 0.25s ease-out;
-  -moz-transition: all 0.25s ease-out;
-  -ms-transition: all 0.25s ease-out;
-  -o-transition: all 0.25s ease-out;
-  transition: all 0.25s ease-out;
+
+h4 {
+  font-weight: 300;
+  letter-spacing: 0.3rem;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
+  font-position: middle;
+  margin: 2em;
+}
+
+h5 {
+  font-weight: 300;
+  letter-spacing: 0.3rem;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
+  font-position: middle;
+  margin: 2em;
+}
+
+h6 {
+  font-weight: 300;
+  letter-spacing: 0.3rem;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
+  font-position: middle;
+  margin: 2em;
+}
+
+h7 {
+  font-weight: 300;
+  letter-spacing: 0.3rem;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
+  font-position: middle;
+  margin: 2em;
+}
+
+h8 {
+  font-weight: 300;
+  letter-spacing: 0.3rem;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
+  font-position: middle;
+  margin: 2em;
 }
 
 img {
@@ -51,16 +105,3 @@ img {
 }
 
 
-#slogan {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    background: none repeat scroll 0 0 #fff;
-}
