--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -17,23 +17,19 @@ h1 {
 }
 
 h2{
-  background: white;
-  color: black;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 1.5em;
-  margin: 2em;
+  font-weight: 400;
+  margin: 1.5em;
+  font-family: 'Playfair Display', serif;
+  font-size:40px;
 }
 
 h3{
   background: white;
-  color: #00ccff;
+  color: #00b8e6
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 1.5em;
-  margin: 2em;
+  font-weight: 200;
+  font-size: 10px;
+  margin: 1.5em;
 }
 
 p1 {  
@@ -42,11 +38,11 @@ p1 {
 }
 
 p2 {
+  font-size: 16px;
+  line-height: 1.5em; 
+  margin: 2em
   font-family: palatino, georgia, serif;  
-  font-size: 13px;
-  line-height: 1em;
-  margin: 2em;
-  font-family: 'Noto Sans', sans-serif;
+
 }
 
 a {
@@ -79,6 +75,7 @@ h6 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  color: #8c8c8c
 }
 
 h7 {
