--- a/unit_3/CSS/style.css
+++ b/unit_3/CSS/style.css
@@ -21,6 +21,7 @@ h2{
   margin: 1.5em;
   font-family: 'Playfair Display', serif;
   font-size:40px;
+  text-align: right;
 }
 
 h3{
@@ -37,17 +38,24 @@ p1 {
   line-height: 1.5em;
 }
 
+div{
+  background: #d9d9d9;
+  margin: 4em;
+  padding: 2em 3em 3em 3em;
+}
+
 p2 {
   font-size: 16px;
+  color: white;
   line-height: 1.5em; 
   margin: 2em
   font-family: palatino, georgia, serif;  
-
 }
 
 a {
   outline: none;
   text-decoration: none;
+  color:black; 
 }
 
 h4 {
@@ -57,6 +65,7 @@ h4 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: center;
 }
 
 h5 {
@@ -66,6 +75,7 @@ h5 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: center;
 }
 
 h6 {
@@ -76,6 +86,7 @@ h6 {
   font-position: middle;
   margin: 2em;
   color: #8c8c8c
+  text-align: center;
 }
 
 h7 {
@@ -85,6 +96,13 @@ h7 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: left;
+}
+
+div{
+  background: #d9d9d9;
+  margin: 4em;
+  padding: 2em 3em 3em 3em;
 }
 
 h8 {
@@ -94,7 +112,9 @@ h8 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: center;
 }
+
 
 img {
   width: 100%;
