--- a/unit_5/CSS/archive/style.css
+++ b/unit_5/CSS/archive/style.css
@@ -12,8 +12,6 @@ body {
 h1 {
   font-weight: 400;
   margin: 1.5em;
-  margin-bottom: 0em;
-  margin-top: 0.5em;
   font-family: 'Playfair Display', serif;
   font-size:40px;
 }
@@ -22,8 +20,7 @@ h2{
   font-weight: 400;
   margin: 1.5em;
   font-family: 'Playfair Display', serif;
-  font-size:20px;
-  text-align: right;
+  font-size:40px;
 }
 
 h3{
@@ -32,43 +29,25 @@ h3{
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 200;
   font-size: 10px;
-  margin: 5.5em;
-  margin-top: 0;
-  margin-bottom: 0.9em;
-
+  margin: 1.5em;
 }
 
-.hero {
-  background-image: url('../Images/estelle_banner.jpg');
-  height: 500px;
-  background-size: cover;
-  background-position: center center ;
-}
-
-div{
-  background: #d9d9d9;
-  margin: 4em;
-  padding: 2em 3em 3em 3em;
-}
-
-span{
-  font-variant: small-caps;
-    letter-spacing: .25em;
-  padding: 0 .2em;
+p1 {  
+  font-size: 18px;
+  line-height: 1.5em;
 }
 
 p2 {
   font-size: 16px;
-  color: white;
   line-height: 1.5em; 
   margin: 2em
   font-family: palatino, georgia, serif;  
+
 }
 
 a {
   outline: none;
   text-decoration: none;
-  color:black; 
 }
 
 h4 {
@@ -77,8 +56,7 @@ h4 {
   font-family: 'Playfair Display', serif;
   font-size:40px;
   font-position: middle;
- 
-  text-align: center;
+  margin: 2em;
 }
 
 h5 {
@@ -88,14 +66,6 @@ h5 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
-  text-align: center;
-}
-
-span{
-  font-variant: small-caps;
-  letter-spacing: .25em;
-  padding: 0 .2em;
-  background: rgba(100,150,150,0);
 }
 
 h6 {
@@ -105,8 +75,7 @@ h6 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
-  color: #8c8c8c;
-  text-align: center;
+  color: #8c8c8c
 }
 
 h7 {
@@ -116,13 +85,6 @@ h7 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
-  text-align: left;
-}
-
-div{
-  background: #d9d9d9;
-  margin: 4em;
-  padding: 2em 3em 3em 3em;
 }
 
 h8 {
@@ -132,31 +94,11 @@ h8 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
-  text-align: center;
 }
-
 
 img {
   width: 100%;
   max-width: 100%;
-} 
-
-.info {
-  border: 3px solid white;
-}
-
-.name {
-  display: inline-block;
-}
-
-nav {
-  display: inline-block;
-  float: right;
-}
-
-.logo-container {
-  width: 20%;
-  display: inline-block;
 }
 
 
