--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -12,6 +12,8 @@ body {
 h1 {
   font-weight: 400;
   margin: 1.5em;
+  margin-bottom: 0em;
+  margin-top: 0.5em;
   font-family: 'Playfair Display', serif;
   font-size:40px;
 }
@@ -20,7 +22,8 @@ h2{
   font-weight: 400;
   margin: 1.5em;
   font-family: 'Playfair Display', serif;
-  font-size:40px;
+  font-size:20px;
+  text-align: right;
 }
 
 h3{
@@ -29,25 +32,43 @@ h3{
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 200;
   font-size: 10px;
-  margin: 1.5em;
+  margin: 5.5em;
+  margin-top: 0;
+  margin-bottom: 0.9em;
+
 }
 
-p1 {  
-  font-size: 18px;
-  line-height: 1.5em;
+.hero {
+  background-image: url('../Images/estelle_banner.jpg');
+  height: 500px;
+  background-size: cover;
+  background-position: center center ;
+}
+
+div{
+  background: #d9d9d9;
+  margin: 4em;
+  padding: 2em 3em 3em 3em;
+}
+
+span{
+  font-variant: small-caps;
+    letter-spacing: .25em;
+  padding: 0 .2em;
 }
 
 p2 {
   font-size: 16px;
+  color: white;
   line-height: 1.5em; 
   margin: 2em
   font-family: palatino, georgia, serif;  
-
 }
 
 a {
   outline: none;
   text-decoration: none;
+  color:black; 
 }
 
 h4 {
@@ -56,7 +77,8 @@ h4 {
   font-family: 'Playfair Display', serif;
   font-size:40px;
   font-position: middle;
-  margin: 2em;
+ 
+  text-align: center;
 }
 
 h5 {
@@ -66,6 +88,16 @@ h5 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: center;
+  padding: 0;
+  
+}
+
+span{
+  font-variant: small-caps;
+  letter-spacing: .25em;
+  padding: 0 .2em;
+  background: rgba(100,150,150,0);
 }
 
 h6 {
@@ -75,7 +107,8 @@ h6 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
-  color: #8c8c8c
+  color: #8c8c8c;
+  text-align: center;
 }
 
 h7 {
@@ -84,7 +117,15 @@ h7 {
   font-family: 'Playfair Display', serif;
   font-size:40px;
   font-position: middle;
-  margin: 2em;
+  margin: 1em;
+  text-align: center;
+  display: block;
+}
+
+div{
+  background: #d9d9d9;
+  margin: 4em;
+  padding: 2em 3em 3em 3em;
 }
 
 h8 {
@@ -94,11 +135,40 @@ h8 {
   font-size:40px;
   font-position: middle;
   margin: 2em;
+  text-align: center;
 }
+
 
 img {
   width: 100%;
   max-width: 100%;
+} 
+
+.info {
+  border: 3px solid white;
+}
+
+.name {
+  display: inline-block;
+}
+
+nav {
+  display: inline-block;
+  float: right;
+}
+
+.logo-container {
+     width: 8.7%;
+    display: inline-block;
+    margin: .5em;
+    padding: 1em;
+    padding-bottom: 0;
+}
+
+.services {
+  width: 25%;
+  display: inline-block;
+ margin: 0;
 }
 
 
