--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -39,7 +39,7 @@ h3{
 }
 
 .hero {
-  background-image: url('../Images/estelle_banner.jpg');
+  background-image: url('../Images/estelle_banner2.jpg');
   height: 500px;
   background-size: cover;
   background-position: center center ;
@@ -75,7 +75,7 @@ h4 {
   font-weight: 300;
   letter-spacing: 0.3rem;
   font-family: 'Playfair Display', serif;
-  font-size:40px;
+  font-size:20px;
   font-position: middle;
  
   text-align: center;
@@ -90,7 +90,7 @@ h5 {
   margin: 2em;
   text-align: center;
   padding: 0;
-  
+
 }
 
 span{
@@ -158,15 +158,16 @@ nav {
 }
 
 .logo-container {
-     width: 8.7%;
+     width: 9.7%;
     display: inline-block;
     margin: .5em;
     padding: 1em;
     padding-bottom: 0;
+    font-size: 
 }
 
 .services {
-  width: 25%;
+  width: 15%;
   display: inline-block;
  margin: 0;
 }
