--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -1,6 +1,6 @@
 
-
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+* { margin:0; padding:0; box-sizing:border-box;}
 
 body {
 		background: #ffffff;
@@ -39,7 +39,7 @@ h3{
 }
 
 .hero {
-  background-image: url('../Images/estelle_banner2.jpg');
+  background-image: url('../Images/marble.jpg');
   height: 500px;
   background-size: cover;
   background-position: center center ;
@@ -75,9 +75,8 @@ h4 {
   font-weight: 300;
   letter-spacing: 0.3rem;
   font-family: 'Playfair Display', serif;
-  font-size:20px;
+  font-size:40px;
   font-position: middle;
- 
   text-align: center;
 }
 
@@ -123,7 +122,7 @@ h7 {
 }
 
 div{
-  background: #d9d9d9;
+  background: white;
   margin: 4em;
   padding: 2em 3em 3em 3em;
 }
@@ -144,9 +143,6 @@ img {
   max-width: 100%;
 } 
 
-.info {
-  border: 3px solid white;
-}
 
 .name {
   display: inline-block;
@@ -167,7 +163,7 @@ nav {
 }
 
 .services {
-  width: 15%;
+  width: 20%;
   display: inline-block;
  margin: 0;
 }
