--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -11,9 +11,7 @@ body {
 }
 h1 {
   font-weight: 400;
-  margin: 1.5em;
-  margin-bottom: 0em;
-  margin-top: 0.5em;
+  margin: .5em 1.5em 0em;
   font-family: 'Playfair Display', serif;
   font-size:40px;
 }
@@ -22,13 +20,13 @@ h2{
   font-weight: 400;
   margin: 1.5em;
   font-family: 'Playfair Display', serif;
-  font-size:20px;
+  font-size:16px;
   text-align: right;
 }
 
 h3{
   background: white;
-  color: #00b8e6
+  color: #00b8e6;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 200;
   font-size: 10px;
@@ -61,8 +59,8 @@ p2 {
   font-size: 16px;
   color: white;
   line-height: 1.5em; 
-  margin: 2em
-  font-family: palatino, georgia, serif;  
+  margin: 2em;
+  font-family: 'palatino', georgia, serif;  
 }
 
 a {
@@ -143,7 +141,6 @@ img {
   max-width: 100%;
 } 
 
-
 .name {
   display: inline-block;
 }
@@ -172,8 +169,15 @@ nav {
 width: 9%;
 display: inline-block;
 margin: 0;
-border-spacing: 1em;
+padding: 1em;
 
+}
+
+.WORK {
+  width: 20%;
+  display: inline-block;
+ margin: 0;
+}
 
 }
 
