--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -26,13 +26,11 @@ h2{
 
 h3{
   background: white;
-  color: #00b8e6;
+  color: black;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 200;
-  font-size: 10px;
-  margin: 5.5em;
-  margin-top: 0;
-  margin-bottom: 0.9em;
+  font-size: 8px;
+  margin: 0.5em 0em 1em 8em;
 
 }
 
@@ -41,6 +39,8 @@ h3{
   height: 500px;
   background-size: cover;
   background-position: center center ;
+  text-align: center;
+  padding: 10em 2em 2em 2em; 
 }
 
 div{
@@ -179,6 +179,35 @@ padding: 1em;
  margin: 0;
 }
 
+#two_column {
+    background-color: black;
+    border: 1px black solid;
+    padding: 20px;
 }
 
+#left {
+    background-color: white;
+    border: 1px black solid;
+    padding: 20px;
+    float: left;
+    width: 30%;
+}
+
+#right {
+    background-color: white;
+    border: 1px black solid;
+    padding: 20px;
+    float: right;
+    width: 62%; 
+    background: 
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
 
