--- a/unit_5/CSS/style.css
+++ b/unit_5/CSS/style.css
@@ -41,6 +41,8 @@ h3{
   background-position: center center ;
   text-align: center;
   padding: 10em 2em 2em 2em; 
+  color: white;
+  font: inherit;
 }
 
 div{
@@ -200,6 +202,7 @@ padding: 1em;
     float: right;
     width: 62%; 
     background: 
+    font: inherit;
 }
 
 .clearfix:after {
@@ -209,5 +212,7 @@ padding: 1em;
     content: " ";
     clear: both;
     height: 0;
+    font: inherit;
 }
+
 
